--- a/budgetManagerFront/package.json
+++ b/budgetManagerFront/package.json
@@ -14,10 +14,15 @@
   "dependencies": {
     "@mdi/font": "^7.1.96",
     "axios": "^1.3.3",
+    "chart.js": "^4.2.1",
     "draggable": "^4.2.0",
+    "localstorage": "^1.0.1",
     "moment": "^2.29.4",
     "sass": "^1.58.1",
+    "vee-validate": "^4.7.4",
+    "vue-chartjs": "^5.2.0",
     "vuedraggable": "^4.1.0",
-    "vuetify": "^3.1.4"
+    "vuetify": "^3.1.4",
+    "vuex": "^4.0.2"
   }
 }
