--- a/budgetManagerFront/package.json
+++ b/budgetManagerFront/package.json
@@ -9,15 +9,21 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/strapi": "^1.7.1",
-    "nuxt": "^3.2.0"
+    "nuxt": "^3.2.0",
+    "tailwindcss": "^3.2.7"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.12",
+    "@heroicons/vue": "^2.0.16",
     "@mdi/font": "^7.1.96",
+    "@pinia/nuxt": "^0.4.7",
     "axios": "^1.3.3",
     "chart.js": "^4.2.1",
     "draggable": "^4.2.0",
     "localstorage": "^1.0.1",
+    "localStorage": "^1.0.4",
     "moment": "^2.29.4",
+    "pinia": "^2.0.32",
     "sass": "^1.58.1",
     "vee-validate": "^4.7.4",
     "vue-chartjs": "^5.2.0",
