--- a/budgetManagerFront/package.json
+++ b/budgetManagerFront/package.json
@@ -9,14 +9,20 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/strapi": "^1.7.1",
+    "@nuxtjs/tailwindcss": "^6.6.6",
+    "autoprefixer": "^10.4.14",
     "nuxt": "^3.2.0",
-    "tailwindcss": "^3.2.7"
+    "postcss": "^8.4.22",
+    "tailwindcss": "^3.3.1"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.12",
-    "@heroicons/vue": "^2.0.16",
+    "@headlessui/vue": "^1.7.13",
+    "@heroicons/vue": "^2.0.17",
     "@mdi/font": "^7.1.96",
     "@pinia/nuxt": "^0.4.7",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "axios": "^1.3.3",
     "chart.js": "^4.2.1",
     "draggable": "^4.2.0",
@@ -28,7 +34,6 @@
     "vee-validate": "^4.7.4",
     "vue-chartjs": "^5.2.0",
     "vuedraggable": "^4.1.0",
-    "vuetify": "^3.1.4",
     "vuex": "^4.0.2"
   }
 }
