--- a/budgetManager/package.json
+++ b/budgetManager/package.json
@@ -9,13 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-documentation": "^4.6.1",
     "@strapi/plugin-i18n": "4.6.1",
     "@strapi/plugin-users-permissions": "4.6.1",
     "@strapi/strapi": "4.6.1",
     "better-sqlite3": "8.0.1",
+    "strapi-connector-mongoose": "^3.6.11",
     "strapi-plugin-config-sync": "^1.1.1"
   },
   "author": {
