--- a/budgetManagerFront/package.json
+++ b/budgetManagerFront/package.json
@@ -19,15 +19,17 @@
     "@headlessui/vue": "^1.7.13",
     "@heroicons/vue": "^2.0.17",
     "@mdi/font": "^7.1.96",
-    "@pinia/nuxt": "^0.4.7",
+    "@pinia/nuxt": "^0.4.9",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "axios": "^1.3.3",
     "chart.js": "^4.2.1",
     "draggable": "^4.2.0",
-    "localstorage": "^1.0.1",
+    "js-cookie": "^3.0.4",
+    "js-cookies": "^1.0.4",
     "localStorage": "^1.0.4",
+    "localstorage": "^1.0.1",
     "moment": "^2.29.4",
     "pinia": "^2.0.32",
     "sass": "^1.58.1",
